--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <meta name="description" content="Kelurahan Sukodono merupakan salah satu kelurahan di Kecamatan Gresik, Kabupaten Gresik, Provinsi Jawa Timur. Wilayah ini dikenal sebagai pusat produksi jajanan khas Gresik, seperti pudak, otak-otak bandeng, jenang jubung, kerupuk ikan Gresik, opak giri, dan aneka makanan khas lainnya." />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Kelurahan Sukodono - Pusat Informasi UMKM lokal" />
+    <meta property="og:description" content="Pusat Informasi UMKM Kelurahan Sukodono." />
+    <meta property="og:image" content="https://th.bing.com/th/id/OIP.sVvQ-a-al4kDWg3m-eKCGwHaE8?rs=1&pid=ImgDetMain" />
+    <meta property="og:url" content="https://kelurahansukodonogresik.biz.id" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="./src/components/assets/favicon.ico" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Kelurahan Sukodono Kecamatan Gresik",
+        "url": "https://kelurahansukodonogresik.biz.id",
+        "logo": "https://4.bp.blogspot.com/-_QcSSePZxkE/W3QAMfsFQ6I/AAAAAAAAP2I/4s19rwj_iCExd2zxh5W-SUZsanh3BmcjQCLcBGAs/s1600/Logo-Kabpaten-Gresik_237-design.png",
+        "sameAs": [
+          "https://www.instagram.com/kelurahan_sukodno2022"
+        ]
+      }
+    </script>
+
+    <!-- Preconnect to external resources -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
     <!-- This is a replit script which adds a banner on the top of the page when opened in development mode outside the replit environment -->
     <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
   </body>
